hphp/test/zend/good/tests/classes/property_recreate_private.php.expectf
Unset and recreate a superclass's private property:
object(D) (1) {
  ["p":"C":private]=>
  string(7) "changed"
}

Unset superclass's private property, and recreate it as public in subclass:
object(D) (1) {
  ["p"]=>
  string(12) "changed in D"
}

Unset superclass's private property, and recreate it as public at global scope:
object(D) (1) {
  ["p"]=>
  string(34) "this will create a public property"
}


Unset and recreate a private property:
object(C) (1) {
  ["p":"C":private]=>
  string(7) "changed"
}

Unset a private property, and attempt to recreate at global scope (expecting failure):

Fatal error: Cannot access protected property in %s/property_recreate_private.php on line 46
